<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string translatable="false" name="app_name">VABC</string>
    <string translatable="false" name="about_name">About VABC</string>
    <string translatable="false" name="establishment_detail_name">Establishment Details</string>
    <string translatable="false" name="action_settings">Settings</string>
    <string translatable="false" name="action_settings_about">About VABC</string>
    <string translatable="false" name="map_api_key">AIzaSyBXEVtJu6H6issGtClZltXeIqm05tiwfMU</string>
    <string translatable="false" name="map_api_key_debug">AIzaSyCMd5hiX_8As6q2MfPO5wYaTgq7rOi3jvw</string>
    <string translatable="false" name="header">Drink</string>
    <string translatable="false" name="establishment_phone_number_label">Phone:</string>
    <string translatable="false" name="establishment_address_label">Address:</string>
    <string translatable="false" name="establishment_open_label">Status:</string>
    <string translatable="false" name="call_button_text">Call Store</string>
    <string translatable="false" name="nav_button_text">Navigate to Store</string>
    
    <string translatable="false" name="blank_text">N/A</string>
    <string translatable="false" name="about_text">VABC stands for <b>V</b>irginia <b>ABC</b> Store Information.\nThis app allows you to select, filter, and search for drinks, as well as to find all ABC store locations in Virginia via the Locations tab. This is not an official Virginia ABC app, nor is this app affiliated with the aforementioned organization.\n\n
        VABC version: 1.0.4\n
        All coding and graphics by <a href="http://bakatz.com">Ben Katz</a>\n
        All data is public domain, retreived from <a href="http://www.abc.virginia.gov">http://www.abc.virginia.gov</a>\n
        </string>

    <string-array translatable="false" name="drink_types_array">
        <item>(All Types)</item>
        <item>Vodka</item>
        <item>Tequila</item>
        <item>Specialty</item>
        <item>Bourbon</item>
        <item>Scotch</item>
        <item>Whiskey</item>
        <item>Rum</item>
        <item>Rock-Rye</item>
        <item>Gin</item>
        <item>Eggnog</item>
        <item>Cognac</item>
        <item>Cocktails</item>
        <item>Brandy</item>
        <item>Moonshine</item>
        <item>Bourbon</item>
        <item>Vermouth</item>
    </string-array>
    <string-array translatable="false" name="drink_sizes_array">
        <item>(All Sizes)</item>
        <item>Handle (1.75L)</item>
        <item>1L</item>
        <item>Fifth (750mL)</item>
        <item>375mL</item>
        <item>50mL</item>
    </string-array>
    <string-array translatable="false" name="drink_sort_types_array">
        <item>Best Value</item>
        <item>Price</item>
        <item>Size</item>
        <item>ABV</item>
        <item>Age</item>
        <item>Name</item>
        <item>Category Name</item>
    </string-array>

</resources>