<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/spacerTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textIsSelectable="false"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/address_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1.0" >

        <TextView
            android:id="@+id/establishmentAddressLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/establishment_address_label"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/establishmentAddressText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:text="@string/blank_text"
            android:textIsSelectable="true"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/phoneno_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1.0" >

        <TextView
            android:id="@+id/phoneNumberLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/establishment_phone_number_label"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/phoneNumberText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:text="@string/blank_text"
            android:textIsSelectable="true"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/open_layout"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:weightSum="1.0" >

        <TextView
            android:id="@+id/openLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/establishment_open_label"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/statusText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:text="@string/blank_text"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/infoText"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:text="@string/blank_text"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/detail_buttons_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1.0" >

        <Button
            android:id="@+id/callButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/call_button_text" />

        <Button
            android:id="@+id/navigateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/nav_button_text" />
    </LinearLayout>

</LinearLayout>